copy updates and some assets

--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -30,6 +30,8 @@
         </div>
     </nav>
 
+    <div class="hero-banner" id="air-infographic"></div>
+
     <!-- Content -->
     <div class="container">
 
@@ -49,7 +51,7 @@
 
         <p>A Heat Recovery Ventilator (HRV) is a heat exchanger and fan unit that provides a continuous low volume of airflow for fresh air purposes. Because of the heat exchanger, the HRV recovers some 90% of the sensible heat from the air stream leaving the building and transfers it to the incoming stream of fresh outside air. HRVs also incorporate a filter to clean the incoming air.</p>
 
-        <p>An HRV allows houses with a high degree of airtightness to meet minimum amounts of fresh air required by standards developed by the American Society of Heating, Refrigeration, and Air Conditioning Engineers.</p>
+        <img src="../IMG/Deep-Dive/HRV-how-it-works.jpeg"/><p>An HRV allows houses with a high degree of airtightness to meet minimum amounts of fresh air required by standards developed by the American Society of Heating, Refrigeration, and Air Conditioning Engineers.</p>
 
         <p>Pollutants that are generated inside the house include particulates from cooking, combustion products from gas burners, candles, open fireplaces, air fresheners and other aerosol sprays, and more. Attached garages are also sources of pollutants including car exhaust and stored chemicals. Breathing the air by occupants also depletes the oxygen which needs to be replenished. If combustion appliances are not vented outdoors then these burners will also deplete oxygen and replace it with carbon dioxide and dangerous carbon monoxide.  The HRV keeps the air quality high, fresh, and the occupants healthy.</p>
 
