--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -48,7 +48,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>100% Electric</h2>
-                        <p class="body-md">LilyPad has enough energy for all your needs. Charge several electric cars, a heat pump, a water heater, washer/dryer, induction cooktop, combination oven, and more. Make extra money by selling back excess energy to the grid. Usher in the end of the fossil fuel era– take control over your life and be your own power plant.</p>
+                        <p class="body-md">Your water heater, climate control, washer/dryer, and cooking appliances can all run 100% off clean electric power. Charge several electric cars. Power perfect temperature with a heat pump. Have great combustion free cooking with an induction cooktop, combination oven, and more. Make money selling energy back to the grid. Usher in the end of the fossil fuel era. Take control over your life and be your own power plant.</p>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Sun Power</h2>
-                        <p class="body-md">LilyPad has a massive thirteen kilowatt solar array that powers everything in their home. This includes heating, cooling, state-of-the-art appliances, electric cars, and still has plenty of excess to sell back to the grid. Stop paying for electricity, heating, and gasoline and instead have your energy company pay you.</p>
+                        <p class="body-md">By covering your entire rooftop in solar you can have enough energy for everything in your life. This includes heating, cooling, state-of-the-art appliances, electric cars, and still have plenty of excess energy to sell back to the grid. Stop paying for electricity, heating, and gasoline and instead have your energy company pay you.</p>
                     </div>
                     <button class="float-right learn-more" onclick="location.href='solar-panels.html'" type="button">Learn More ></button>
                 </div>
