--- a/design.html
+++ b/design.html
@@ -42,7 +42,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Design Philosophy</h2>
-                        <p class="body-md"> LilyPad is designed to last two centuries. The space is built for community. People can gather in sitting circles and interact organically by centralizing walking paths. Spaces are modular, reconfigurable, and useful—catering to all your needs. High-quality materials and well-designed systems will save you money, be more comfortable, and be a great experience.</p>
+                        <p class="body-md">Your home should last two centuries. By designing a space that is built for people, you will foster organic interactions and connection. Sitting circles connect to an abundance of walking paths and modular spaces that are reconfigurable and functionable. High-quality materials and well-designed systems not only save money and time, but are a wonderful experience.</p>
                     </div>
                 </div>     
             </div>
