--- a/experience.html
+++ b/experience.html
@@ -39,7 +39,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Perfect Lighting</h2>
-                        <p class="body-md">LilyPad has four types of efficient LED lighting. Every room has task-lighting to focus on a project, gallery lighting to display artwork, wall washing lights that create a warm ambiance, and motion-activated path lighting. So comfortably walk to the bathroom in the nighttime without waking up anyone, tripping, or shocking your eyes. </p>
+                        <p class="body-md">Every room should have appropriate L.E.D. lighting. Task-lighting helps you focus on a project. Gallery lighting proudly displays your artwork. Wall washing lights create a warm ambiance and motion-activated path lighting stops you from tripping over your pets in the middle of the night. L.E.D. lighting comes in the all the varieties you'd expect from traditional bulbs, including filament bulbs.</p>
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Stops Sound Pollution</h2>
-                        <p class="body-md">By heavily insulating each room, using triple-pane windows, a ductless HVAC system, and drop door seals, you create great sound isolation. This lets roommates work in peace and isolates you from outdoor noise so you won't wake up to the morning garbage trucks. The range hood blower also has a remote fan that won't disrupt conversation.</p>
+                        <p class="body-md">Through its use of triple-pane windows, a ductless HVAC system, individual room insulation, and drop door seals, you can have great sound isolation. This lets roommates work in peace and isolates you from outdoor noise so you won't wake up to the morning garbage trucks. A remote blower on the range hood is super quiet so won't disrupt conversation.</p>
                     </div>
                 </div>     
             </div>
@@ -90,7 +90,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Year-round Comfort</h2>
-                        <p class="body-md">In a High-Performance home you never having to sacrifice your comfort. Room-specific temperatures let your whole family be comfortable. The recirculating hot water loop is triggered by a motion sensor that makes hot water readily available. A high-efficiency water heater, instant hot water, and push-button activation means guilt-free showers.</p>
+                        <p class="body-md">In a High-Performance home you never having to sacrifice your comfort. Room-specific temperatures let your whole family be comfortable. The recirculating hot water loop is triggered by a motion sensor that makes hot water instantly available. This paired with a high-efficiency water heater and push-button shower head activation means guilt-free showers.</p>
                     </div>
                 </div>
             </div>
@@ -126,9 +126,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Low Maintenance</h2>
-                        <p class="body-md">Let your home work for you. Spend less time repairing, cleaning, maintaining, and spending. LilyPad’s counters and hardwood floors are easy to clean and hide dirt. A dog washing station keeps mud out of your house and a mud room stops humans from bringing in dirt. Spend less time cleaning your home and more time living your life.</p>
-
-
+                        <p class="body-md">Let your home work for you. Spend less time repairing, cleaning, maintaining, and spending. Choose counters and hardwood floors that are easy to clean and hide dirt. A dog washing station keeps mud out of your house and a mud room stops humans from bringing in dirt. Spend less time cleaning your home and more time living your life.</p>
                     </div>
                 </div>
             </div>
