--- a/home.html
+++ b/home.html
@@ -55,8 +55,9 @@
             <div class="three-column">
                 <img class="icons"  src="Icons/community.png" />
                 <h2>Build Community</h2>
-                <p class="body-sm">Lily Pad builds community through human-centered design— enrich your community through welcoming spaces that encourage
-connection.</p>
+                <p class="body-sm">
+                By using human-centered design, your home will be a joyful experience that fosters interaction through welcoming spaces that encourage connection.  
+</p>
             </div>
         </div>
         <div class="twenty-pad"></div>
@@ -64,7 +65,7 @@ connection.</p>
 
     <div class="banner">
         <blockquote>
-            <span class="quote-mark">“</span>Incentive structure is flawed, not building quality. Building quality is cost-effective and should be incentivized.                                                                                   
+            <span class="quote-mark">“</span>Building quality, high-performance systems is cost-effective, hassle-saving, a joyful experience, sustainable, and should be incentivized.                                                                                   
         </blockquote>
         <p class="quote-citation">-LilyPad Homeowners</p>
     </div>
@@ -97,8 +98,7 @@ connection.</p>
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Great Experience</h2>
-                        <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, LilyPad is home, enabling your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
-
+                        <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, your home should help your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
                         <button  class="float-right learn-more">
                             <a href="experience.html">Learn More ></a>
                         </button>
