more diagrams up

--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -35,7 +35,7 @@
     <div class="hero-banner" id="air-infographic"></div>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container deep-dive">
 
 
         <p><a href="../systems.html">Systems</a> > <a href="../Systems/sound-air.html">Sound &amp; Air Handling</a> / <a href="../Systems/climate.html">Climate Control</a> > <b>Thermal, Moisture, &amp; Air Management</b></p>
@@ -46,22 +46,33 @@
 
         <a class="page-anchor" name="hrv"></a>
 
-        <h2>Heat Recovery Ventilation</h2>
+        <h1>Heat Recovery Ventilation</h1>
 
         <p>A very tightly air-sealed house goes a long way towards reducing the need to heat or cool outside air randomly leaking into the house and thereby saving energy. But that leaking air did have one beneficial purpose: diluting pollution. A tight house without the uncontrolled outside air has the potential to accumulate pollutants. A smarter way to provide clean air than uncontrolled outside air leaks is to install a Heat Recovery Ventilator allowing control of the airflow.</p>
 
         <p>A Heat Recovery Ventilator (HRV) is a heat exchanger and fan unit that provides a continuous low volume of airflow for fresh air purposes. Because of the heat exchanger, the HRV recovers some 90% of the sensible heat from the air stream leaving the building and transfers it to the incoming stream of fresh outside air. HRVs also incorporate a filter to clean the incoming air.</p>
 
-        <img src="../IMG/Deep-Dive/HRV-how-it-works.jpeg"/><p>An HRV allows houses with a high degree of airtightness to meet minimum amounts of fresh air required by standards developed by the American Society of Heating, Refrigeration, and Air Conditioning Engineers.</p>
+        <figure class="width50 float-left">
+            <img src="../IMG/Deep-Dive/HRV-how-it-works.jpeg"/>
+            <figcaption>An HRV Recovers Hot and Cold Air</figcaption>
+        </figure>
+        
+        <p>An HRV allows houses with a high degree of airtightness to meet minimum amounts of fresh air required by standards developed by the American Society of Heating, Refrigeration, and Air Conditioning Engineers.</p>
 
         <p>Pollutants that are generated inside the house include particulates from cooking, combustion products from gas burners, candles, open fireplaces, air fresheners and other aerosol sprays, and more. Attached garages are also sources of pollutants including car exhaust and stored chemicals. Breathing the air by occupants also depletes the oxygen which needs to be replenished. If combustion appliances are not vented outdoors then these burners will also deplete oxygen and replace it with carbon dioxide and dangerous carbon monoxide.  The HRV keeps the air quality high, fresh, and the occupants healthy.</p>
 
 
         <a class="page-anchor" name="air-sealing"></a>
-        <h2>Air Sealing</h2>
+        <h1>Air Sealing</h1>
+
+        <img src="../Placeholder/blower-test-video.png" class="video" />
 
         <p>Air leaking into a well-constructed house circa 2000 comes in through gaps and cracks around windows and doors, where wall top plates and bottom plates join ceiling and floor construction, between sheets of plywood in the subfloor, around electrical and plumbing penetrations, and other places. If you add together all the cracks and leaky spaces in that year-2000 home, it would add up to a hole in the building about a 2-foot square in size. Today’s techniques reduce that hole to about a 6-inch square.</p>
 
+            <figure class="width50 float-left">
+                <img src="../IMG/Deep-Dive/ACH-Graph.png" />
+                <figcaption>Air Changes per Hour</figcaption>
+            </figure>
         <p>When air sealing first started becoming an emphasis by progressive builders in the 70’s and early 80’s, the sealing membrane of choice was polyethylene. Applied to the interior (winter heated) side of the studs under the drywall, it did an admirable job of blocking air leaks and water vapor migration. This performs wonderfully in high-altitude, mountainous locations but in southeastern hot humid climates it’s a different story.</p>
 
         <p>When hot, humid outdoor air comes into contact with the inner-wall vapor barrier, where the temperature is lower because the air conditioner is running, the water vapor condenses on the surface inside the wall, causing moisture, dry rot, and wood destruction. So just put the vapor barrier on the outside, you say? That would work in the summer, but then in the winter you’d get the opposite effect with interior-generated vapor condensing on the cold outer barrier, again inside the wall.</p>
@@ -74,14 +85,18 @@
 
         <p>This small pressure difference is enough to cause air to leak into the house wherever it can. If the air outside is significantly cooler or warmer than the inside, then the leaks will cause temperature differences to appear that can then be viewed through infrared thermography. Places to look for leaks to seal would be where walls and floors or ceilings meet, where there are penetrations such as electrical outlets or recessed lights, and around doors and windows.</p>
 
+        <img src="../IMG/Deep-Dive/infrared-imagery.jpg" />
+        
         <p>A blower door test will result in a score that is expressed as Air Changes per Hour at 50 Pascal (ACH50). The video on the topic of Blower Door Testing gives a table that interprets an ACH50 score in terms of relative leakiness or points in various rating systems.</p>
+
+        <img src="../IMG/Deep-Dive/outsulation-thermal-bridging.jpeg" />
 
         <p>LilyPad uses the Dryvit system, with a 2” EPS insulation layer. It not only provides insulation (outsulation), but incorporates a water-resistive barrier, a drainage plane, and a finish coat that is extraordinarily flat and smooth. With the color embedded in the finish coat, the surface is virtually maintenance-free.</p>
 
         <p>Other common continuous insulation barriers include polyisocyanurate board (polyiso) with or without the foil radiant barrier facing, taped at the seams. A relatively new product called InSoFast has 2-½” of EPS foam with embedded plastic “studs” that give a firm substrate for attaching siding, and come with an molded-in rain drainage channel. The panels come in 2’x4’ pieces.</p>
 
         <a class="page-anchor" name="outsulation"></a>
-        <h2>Outsulation</h2>
+        <h1>Outsulation</h1>
 
 
         <p><strong>How to Insulate the High-Performance House</strong></p>
