--- a/Systems/greywater.html
+++ b/Systems/greywater.html
@@ -31,11 +31,13 @@
     </nav>
 
     <!-- Content -->
-    <div class="container">
+    <div class="container deep-dive">
 
         <div class="nav-spacer"></div>
 
         <p><a href="../systems.html">Systems</a> > <a href="../Systems/water.html">Water</a> > <b>Greywater Reuse</b></p>
+
+         <img src="../Placeholder/greywater-video.png" class="video" />
 
          <p>If you’ve ever travelled in a self-contained recreational vehicle, you’re probably familiar with the idea of black water and gray water, as they are stored in different holding tanks. In a house, black water comes from toilets, and gray water comes from showers and lavatories. 
 
