--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -112,8 +112,10 @@
                 </div>
             </div>
         </div>
-    
-        <div class="bottom-nav-wrapper">
+    </div>
+
+    <div class="bottom-nav-wrapper">
+        <div class="container">
             <button  class="float-left bottom-nav">
                         <a href="../Systems/sound-air.html">< Sound &amp; Air Handling</a>
             </button>
@@ -122,7 +124,6 @@
             </button>
         </div>
     </div>
-
 
 <div id="footer"></div>
 
