--- a/Systems/greywater.html
+++ b/Systems/greywater.html
@@ -30,14 +30,16 @@
         </div>
     </nav>
 
+    <div class="nav-spacer"></div>
+
+    <div class="hero-banner" id="water-infographic"></div>
+
     <!-- Content -->
     <div class="container deep-dive">
 
-        <div class="nav-spacer"></div>
-
         <p><a href="../systems.html">Systems</a> > <a href="../Systems/water.html">Water</a> > <b>Greywater Reuse</b></p>
 
-         <img src="../Placeholder/greywater-video.png" class="video" />
+         <iframe width="100%" height="420" src="https://www.youtube.com/embed/fMgc_NDUO24" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
          <p>If you’ve ever travelled in a self-contained recreational vehicle, you’re probably familiar with the idea of black water and gray water, as they are stored in different holding tanks. In a house, black water comes from toilets, and gray water comes from showers and lavatories. 
 
