--- a/design.html
+++ b/design.html
@@ -128,13 +128,14 @@
                 </div>
             </div>
         </div>
-        <div class="bottom-nav-wrapper">
-            <button  class="float-right bottom-nav">
-                        <a href="experience.html">Experience ></a>
-            </button>
-        </div>
     </div>
-
+<div class="bottom-nav-wrapper">
+    <div class="container">
+        <button  class="float-right bottom-nav">
+                    <a href="experience.html">Experience ></a>
+        </button>
+    </div>
+</div>
 
 <div id="footer"></div>
 
