--- a/experience.html
+++ b/experience.html
@@ -131,16 +131,18 @@
                 </div>
             </div>
         </div>
-        <div class="bottom-nav-wrapper">
+    </div>
+
+<div class="bottom-nav-wrapper">
+    <div class="container">
             <button  class="float-left bottom-nav">
                         <a href="design.html">< Design</a>
             </button>
             <button  class="float-right bottom-nav">
                         <a href="systems.html">Systems ></a>
             </button>
-        </div>
     </div>
-
+</div>
 
 <div id="footer"></div>
 
