--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 
     <style type="text/css">
         #vr-hero {
-            background-image: url("Placeholder/VR-placeholder.png");
+            background-image: url("../Placeholder/VR-placeholder.png");
         }
     
     </style>
@@ -21,7 +21,7 @@
 
     <div id="nav-menu"></div>
 
-    <nav>
+    <nav class="nav-fixed">
         <div class="nav-wrapper">
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
@@ -31,6 +31,8 @@
             <a href="index.html"><img src="IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
+
+    <div class="nav-spacer"></div>
 
     <div class="hero-banner" id="vr-hero"></div>
 
@@ -76,7 +78,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Innovative Design</h2>
-                        <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era track house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
+                        <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era tract house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
 
                         <button  class="float-right learn-more">
                             <a href="design.html">Learn More ></a>
