--- a/resources.html
+++ b/resources.html
@@ -9,6 +9,10 @@
 
     <style type="text/css">
 
+    html {
+        background: rgb(237, 237, 237);
+    }
+
     #resource-container {
         background: rgb(237, 237, 237);
     }
@@ -211,16 +215,17 @@
             </a>
         </div>
         <div class="forty-pad"></div>
-
-        <div class="bottom-nav-wrapper">
-            <button  class="float-left bottom-nav">
-                        <a href="systems.html">< Systems</a>
-            </button>
-            <button  class="float-right bottom-nav">
-                        <a href="contact-us.html">Contact Us ></a>
-            </button>
-        </div>
     </div>
+    <div class="bottom-nav-wrapper">
+            <div class="container">
+                <button  class="float-left bottom-nav">
+                            <a href="systems.html">< Systems</a>
+                </button>
+                <button  class="float-right bottom-nav">
+                            <a href="contact-us.html">Contact Us ></a>
+                </button>
+            </div>
+        </div>
 </div>
 
 
