--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -65,14 +65,10 @@
         <a class="page-anchor" name="air-sealing"></a>
         <h1>Air Sealing</h1>
 
-        <img src="../Placeholder/blower-test-video.png" class="video" />
+        <iframe width="100%" height="420" src="https://www.youtube.com/embed/aHyZEazGwa8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <p>Air leaking into a well-constructed house circa 2000 comes in through gaps and cracks around windows and doors, where wall top plates and bottom plates join ceiling and floor construction, between sheets of plywood in the subfloor, around electrical and plumbing penetrations, and other places. If you add together all the cracks and leaky spaces in that year-2000 home, it would add up to a hole in the building about a 2-foot square in size. Today’s techniques reduce that hole to about a 6-inch square.</p>
 
-            <figure class="width50 float-left">
-                <img src="../IMG/Deep-Dive/ACH-Graph.png" />
-                <figcaption>Air Changes per Hour</figcaption>
-            </figure>
         <p>When air sealing first started becoming an emphasis by progressive builders in the 70’s and early 80’s, the sealing membrane of choice was polyethylene. Applied to the interior (winter heated) side of the studs under the drywall, it did an admirable job of blocking air leaks and water vapor migration. This performs wonderfully in high-altitude, mountainous locations but in southeastern hot humid climates it’s a different story.</p>
 
         <p>When hot, humid outdoor air comes into contact with the inner-wall vapor barrier, where the temperature is lower because the air conditioner is running, the water vapor condenses on the surface inside the wall, causing moisture, dry rot, and wood destruction. So just put the vapor barrier on the outside, you say? That would work in the summer, but then in the winter you’d get the opposite effect with interior-generated vapor condensing on the cold outer barrier, again inside the wall.</p>
@@ -81,23 +77,35 @@
 
         <p>Air sealing is accomplished through the liberal use of caulking and gasketing. Special attention should be given to areas where planes intersect, as where the walls meet the ceiling.</p>
 
+        <figure class="width50 float-left">
+            <img src="../IMG/Deep-Dive/blower-door-diagram.jpg"/>
+            <figcaption>How a Blower Door Test Measures Air Leakage</figcaption>
+        </figure>
+
         <p>A blower door test is the standard method to detect leaks in a home. A special apparatus designed just for this purpose, a blower door is an adjustable  frame with a ripstop nylon skin that adjusts to fit tightly into a door opening. The blower door has a built-in fan and a pressure gauge so it can create a small vacuum on your house.</p>
 
-        <p>This small pressure difference is enough to cause air to leak into the house wherever it can. If the air outside is significantly cooler or warmer than the inside, then the leaks will cause temperature differences to appear that can then be viewed through infrared thermography. Places to look for leaks to seal would be where walls and floors or ceilings meet, where there are penetrations such as electrical outlets or recessed lights, and around doors and windows.</p>
+        <figure class="clear">
+            <img src="../IMG/Deep-Dive/infrared-imagery.jpg" />
+            <figcaption>Infrared Thermography Shows Air Leakage</figcaption>
+        </figure>
 
-        <img src="../IMG/Deep-Dive/infrared-imagery.jpg" />
+        <p>This small pressure difference is enough to cause air to leak into the house wherever it can. If the air outside is significantly cooler or warmer than the inside, then the leaks will cause temperature differences to appear that can then be viewed through infrared thermography. Places to look for leaks to seal would be where walls and floors or ceilings meet, where there are penetrations such as electrical outlets or recessed lights, and around doors and windows.</p>
         
+        <figure class="width50 float-left">
+            <img src="../IMG/Deep-Dive/ACH-Graph.png" />
+            <figcaption>Air Changes per Hour</figcaption>
+        </figure>
+
         <p>A blower door test will result in a score that is expressed as Air Changes per Hour at 50 Pascal (ACH50). The video on the topic of Blower Door Testing gives a table that interprets an ACH50 score in terms of relative leakiness or points in various rating systems.</p>
 
-        <img src="../IMG/Deep-Dive/outsulation-thermal-bridging.jpeg" />
+        <a class="page-anchor" name="outsulation"></a>
+        <h1>Outsulation</h1>
 
         <p>LilyPad uses the Dryvit system, with a 2” EPS insulation layer. It not only provides insulation (outsulation), but incorporates a water-resistive barrier, a drainage plane, and a finish coat that is extraordinarily flat and smooth. With the color embedded in the finish coat, the surface is virtually maintenance-free.</p>
 
         <p>Other common continuous insulation barriers include polyisocyanurate board (polyiso) with or without the foil radiant barrier facing, taped at the seams. A relatively new product called InSoFast has 2-½” of EPS foam with embedded plastic “studs” that give a firm substrate for attaching siding, and come with an molded-in rain drainage channel. The panels come in 2’x4’ pieces.</p>
 
-        <a class="page-anchor" name="outsulation"></a>
-        <h1>Outsulation</h1>
-
+        <img src="../IMG/Deep-Dive/outsulation-thermal-bridging.jpeg" />
 
         <p><strong>How to Insulate the High-Performance House</strong></p>
         <p>One of the most important things to do to make a house high performing is to insulate well. But how do you decide what level and type of insulation to use?
