--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -100,8 +100,10 @@
                 </div>
             </div>
         </div>
-    
-        <div class="bottom-nav-wrapper">
+    </div>
+
+    <div class="bottom-nav-wrapper">
+        <div class="container">
             <button  class="float-left bottom-nav">
                         <a href="../Systems/climate.html">< Climate Control</a>
             </button>
@@ -110,7 +112,6 @@
             </button>
         </div>
     </div>
-
 
 <div id="footer"></div>
 
