--- a/design.html
+++ b/design.html
@@ -76,12 +76,12 @@
 
     </div>
 
-    <div class="banner">
+<!--     <div class="banner">
         <blockquote>
             <span class="quote-mark">“</span>We want to shift the mindset of appraisers and the real estate industry as a whole.  For example, an individual is selling a house and in order to sell it, the code requires a working heating system.  Rather than put in a quality, high-efficiency system, they opt for the cheapest thing they can to meet the minimum bar.  The new owners are unlikely to rip out a brand new existing system, keeping the market for cheap inefficient systems afloat.
         </blockquote>
         <p class="quote-citation">-LilyPad Homeowners</p>
-    </div>
+    </div> -->
 
     <div class="container">
         <div class="row">
@@ -89,7 +89,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Community First</h2>
-                        <p class="body-md"> Many houses are designed so that people are far apart. LilyPad instead prioritizes spaces that help people connect, collaborate, and play. It's ready to host large potlucks. There are two dishwashers, a cooking and cleaning sink, as well as five areas to chat, play, and connect. It's ready to host workshops or for chefs to teach cooking classes.</p>
+                        <p class="body-md">Many houses are designed so that people are far apart. LilyPad instead prioritizes spaces that help people connect, collaborate, and play. It's ready to host large potlucks. There are two dishwashers, a cooking and cleaning sink, as well as five areas to chat, play, and connect. It's ready to host workshops or for chefs to teach cooking classes.</p>
                     </div>
                 </div>
 
@@ -107,7 +107,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Creating Healthy Spaces</h2>
-                        <p class="body-md"> Conventional buildings off-gas dangerous chemicals known as volatile organic compounds (VOCs). By coupling tight air sealing with a Heat Recovery Ventilation system, your air is constantly fresh, filtered, and oxygenated, filtered every three hours. This means fewer allergens, molds, problems, and keeps you alert and sniffle-free. </p>
+                        <p class="body-md">Conventional buildings off-gas dangerous chemicals known as volatile organic compounds (VOCs). By coupling tight air sealing with a Heat Recovery Ventilation system, your air is constantly fresh, filtered, and oxygenated—replaced every three hours. This means fewer allergens, molds, problems, and keeps you alert and sniffle-free.</p>
 
 
                     </div>
