--- a/experience.html
+++ b/experience.html
@@ -108,7 +108,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Time and Hassle Saving</h2>
-                        <p class="body-md">Several convenient features save you time. A smart lock gets you into your home easy and securely. The ability to remotely open the garage lets guests easily park and charge up their electric cars. Dual dishwashers make cleanup fast and easy. A remote sewer diversion switch next to sinks makes it simple if you need to pour bleach down the drain. </p>
+                        <p class="body-md">Several convenient features save you time. A smart lock gets you into your home easily and securely. The ability to remotely open the garage lets guests easily park and charge up their electric cars. Dual dishwashers make cleanup fast and easy. A remote sewer diversion switch next to sinks makes it simple if you need to pour bleach down the drain and not into your landscape.</p>
                     </div>
                 </div>
 
