contact dark bg

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,10 @@
 
     <style type="text/css">
 
+        html {
+            background: #686767;
+        }
+
         #contact-box {
             width: 400px;
             text-align: center;
