--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <style type="text/css">
         #vr-hero {
             background-image: url("../Placeholder/VR-placeholder.png");
+            height: 500px;
         }
     
     </style>
