push image assets

--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -101,11 +101,24 @@
         <a class="page-anchor" name="outsulation"></a>
         <h1>Outsulation</h1>
 
+        <figure class="clear">
+            <img src="../IMG/Deep-Dive/outsulation-diagram.jpeg" />
+            <figcaption>Outsulation<sup>TM</sup> Exploded Diagram</figcaption>
+        </figure>
+
         <p>LilyPad uses the Dryvit system, with a 2” EPS insulation layer. It not only provides insulation (outsulation), but incorporates a water-resistive barrier, a drainage plane, and a finish coat that is extraordinarily flat and smooth. With the color embedded in the finish coat, the surface is virtually maintenance-free.</p>
 
         <p>Other common continuous insulation barriers include polyisocyanurate board (polyiso) with or without the foil radiant barrier facing, taped at the seams. A relatively new product called InSoFast has 2-½” of EPS foam with embedded plastic “studs” that give a firm substrate for attaching siding, and come with an molded-in rain drainage channel. The panels come in 2’x4’ pieces.</p>
 
-        <img src="../IMG/Deep-Dive/outsulation-thermal-bridging.jpeg" />
+        <figure class="width50 float-left">
+            <img src="../IMG/Deep-Dive/outsulation-footprint.jpeg" />
+            <figcaption>Total Carbon Footprint of Cladding Types</figcaption>
+        </figure>
+
+        <figure class="width50 float-right">
+            <img src="../IMG/Deep-Dive/r-value-comparison.jpeg" />
+            <figcaption>R-Value Comparison of Different Insulation Approaches</figcaption>
+        </figure>
 
         <p><strong>How to Insulate the High-Performance House</strong></p>
         <p>One of the most important things to do to make a house high performing is to insulate well. But how do you decide what level and type of insulation to use?
@@ -119,7 +132,12 @@
 
         <p>If you assume that the wall is constructed of 2x4s on 16” centers, then the average R-value of that wall with R-13 insulation batts is 12.25.</p>
 
-        <p><strong>Exterior continuous insulation</strong></p>
+        <figure class="clear">
+            <img src="../IMG/Deep-Dive/outsulation-thermal-bridging.jpeg" />
+            <figcaption>Thermal Loss Before/After Continous Insulation</figcaption>
+        </figure>
+
+        <p><strong>Exterior Continuous Insulation</strong></p>
         <p>If you were to install a layer of 1” rigid foam insulation with an R-value of 6 to the exterior side of that wall, the wall would be R-18.25. Installing that same insulation into the stud bay (say with spray foam) would yield an overall R-value of only 17.7 for this typical wall. Not only is the material therefore more effective, but it also results in the studs themselves being warmer (in winter heating mode) thereby resulting in less moisture condensation inside the wall, which can prevent mold and dryrot. The following infrared thermography provided by Dow Chemical shows this effect visually:</p>
 
     
