--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -101,12 +101,12 @@
         <a class="page-anchor" name="outsulation"></a>
         <h1>Outsulation</h1>
 
+        <p>LilyPad uses the Dryvit system, with a 2” EPS insulation layer. It not only provides insulation (outsulation), but incorporates a water-resistive barrier, a drainage plane, and a finish coat that is extraordinarily flat and smooth. With the color embedded in the finish coat, the surface is virtually maintenance-free.</p>
+
         <figure class="clear">
             <img src="../IMG/Deep-Dive/outsulation-diagram.jpeg" />
             <figcaption>Outsulation<sup>TM</sup> Exploded Diagram</figcaption>
         </figure>
-
-        <p>LilyPad uses the Dryvit system, with a 2” EPS insulation layer. It not only provides insulation (outsulation), but incorporates a water-resistive barrier, a drainage plane, and a finish coat that is extraordinarily flat and smooth. With the color embedded in the finish coat, the surface is virtually maintenance-free.</p>
 
         <p>Other common continuous insulation barriers include polyisocyanurate board (polyiso) with or without the foil radiant barrier facing, taped at the seams. A relatively new product called InSoFast has 2-½” of EPS foam with embedded plastic “studs” that give a firm substrate for attaching siding, and come with an molded-in rain drainage channel. The panels come in 2’x4’ pieces.</p>
 
@@ -120,7 +120,7 @@
             <figcaption>R-Value Comparison of Different Insulation Approaches</figcaption>
         </figure>
 
-        <p><strong>How to Insulate the High-Performance House</strong></p>
+        <p class="clear"><strong>How to Insulate the High-Performance House</strong></p>
         <p>One of the most important things to do to make a house high performing is to insulate well. But how do you decide what level and type of insulation to use?
         In order to meet minimum code levels of insulation you will likely be installing fiberglass batts in the cavities of the walls in between the studs. These batts will be nominally R-13 (for 2x4 walls) or R-21 (for 2x6 walls). However, the finished result will be less than this for these reasons:</p>
 
