--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -8,13 +8,6 @@
     <link rel="stylesheet" type="text/css" href="../CSS/global.css" media="screen">
 
     <style type="text/css">
-
-        #climate-infographic {
-            background-image: url("../Placeholder/insulation-schematic.png");
-            height: 35vw;
-            width: 100%;
-        }
-
     
     </style>
     
@@ -36,12 +29,12 @@
         </div>
     </nav>
 
-    <div class="hero-banner" id="climate-infographic"></div>
-
     <!-- Content -->
     <div class="container">
         <div class="row">
             <div class="column">
+
+                <img src="../IMG/Deep-Dive/outsulation-diagram.jpeg" />
                 <div class="split left">
                     <img src="../Placeholder/placeholder-img.png">
                 </div>
