assets for top-level pages

--- a/design.html
+++ b/design.html
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="split right">
-                     <img src="Placeholder/people-gathering.png">
+                     <img src="IMG/Design/community.jpg">
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="split right">
-                    <img src="Placeholder/placeholder-img.png">
+                    <img src="IMG/Design/outside-in.jpg">
                 </div>
             </div>
         </div>
