--- a/experience.html
+++ b/experience.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="Placeholder/playing-drums.png">
+                    <img src="IMG/Experience/playing-drums.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
@@ -62,12 +62,12 @@
             </div>
         </div>
     </div>
-    <div class="banner">
+<!--     <div class="banner">
         <blockquote>
             <span class="quote-mark">“</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
         <p class="quote-citation">-Ut enim ad minim veniam</p>
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
             <div class="column">
@@ -78,14 +78,14 @@
                     </div>
                 </div>
                 <div class="split right">
-                    <img src="Placeholder/looking-relaxed.png">
+                    <img src="IMG/Experience/relaxed.jpg">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="column">
                 <div class="split left">
-                     <img src="Placeholder/placeholder-img.png">
+                     <img src="IMG/Experience/comfort.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
@@ -96,12 +96,12 @@
             </div>
         </div>
     </div>
-    <div class="banner">
+<!--     <div class="banner">
             <blockquote>
                 <span class="quote-mark">“</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </blockquote>
             <p class="quote-citation">-Ut enim ad minim veniam</p>
-    </div>
+    </div> -->
     <div class="container">
         <div class="row">
             <div class="column">
@@ -113,14 +113,14 @@
                 </div>
 
                 <div class="split right">
-                     <img src="Placeholder/placeholder-img.png">
+                     <img src="IMG/Experience/time-saving.jpg">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="Placeholder/placeholder-img.png">
+                    <img src="IMG/Experience/maintenance.jpg">
                 </div>
 
                 <div class="split right">
