--- a/systems.html
+++ b/systems.html
@@ -13,6 +13,10 @@
             width: 240px;
         }
 
+        .row {
+            margin-bottom: -5px;
+        }
+
     
     </style>
     
@@ -63,9 +67,9 @@
             </div>
         </div>
         <div class="image-text-wrapper">
-            <a href="Systems/sound-air.html"><img src="Placeholder/air-sound-system.png" /></a>
-<!--             <div class="image-text-overlay">Air &amp; Sound</div>
- -->        </div>
+            <a href="Systems/sound-air.html"><img src="IMG/Systems/sound-air.jpg" /></a>
+            <div class="image-text-overlay">Sound &amp; Air Handling</div>
+        </div>
 <!--         <div class="row">
             <div class="column">
                 <div class="split left">
