--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="Placeholder/placeholder-img.png">
+                    <img src="IMG/Home/friends-bbq.jpg">
                 </div>
 
                 <div class="split right">
